# backend/src/main/java/com/lolchievement/domain/achievement/model/AchievementTracking.java
@@ -1,6 +1,0 @@
-package com.lolchievement.domain.achievement.model;
-
-public enum AchievementTracking {
-    LIFETIME,
-    SEASON
-}
