# backend/src/main/java/com/lolchievement/domain/challenge/model/Challenge.java
@@ -1,4 +1,4 @@
-package com.lolchievement.domain.achievement.model;
+package com.lolchievement.domain.challenge.model;
 
 import com.lolchievement.domain.common.model.Language;
 import com.lolchievement.dto.State;
@@ -11,11 +11,11 @@ import java.util.List;
 @Data
 @Builder
 @EqualsAndHashCode
-public class Achievement {
+public class Challenge {
     private Long id;
     private List<Language> languages;
     private State state;
-    private AchievementTracking tracking;
+    private ChallengeTracking tracking;
     private boolean leaderboard;
-    private List<AchievementThreshold> thresholds;
+    private List<ChallengeThreshold> thresholds;
 }
