# backend/src/main/java/com/lolchievement/domain/challenge/model/ChallengeThreshold.java
@@ -1,4 +1,4 @@
-package com.lolchievement.domain.achievement.model;
+package com.lolchievement.domain.challenge.model;
 
 import lombok.Builder;
 import lombok.Data;
@@ -7,7 +7,7 @@ import lombok.EqualsAndHashCode;
 @Data
 @Builder
 @EqualsAndHashCode
-public class AchievementThreshold {
+public class ChallengeThreshold {
     private String title;
     private double value;
 }
