# backend/src/main/java/com/lolchievement/domain/challenge/model/ChallengeTracking.java
@@ -1,0 +1,6 @@
+package com.lolchievement.domain.challenge.model;
+
+public enum ChallengeTracking {
+    LIFETIME,
+    SEASON
+}
