# backend/src/main/java/com/lolchievement/domain/challenge/model/PlayerChallenge.java
@@ -1,4 +1,4 @@
-package com.lolchievement.domain.achievement.model;
+package com.lolchievement.domain.challenge.model;
 
 import lombok.Builder;
 import lombok.Data;
@@ -7,7 +7,7 @@ import lombok.EqualsAndHashCode;
 @Data
 @Builder
 @EqualsAndHashCode
-public class PlayerAchievement {
+public class PlayerChallenge {
     private long challengeId;
     private String level;
     private double value;
